# torch-fasttext

./: README.md  pyproject.toml
src/: main.py
src/models/: modeling_fasttext.py
