[tool.poetry]
name = "torch-fasttext"
version = "0.1.0"
description = ""
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_fasttext"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

